// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bucket Should support multiple sources 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "output": {
    "HelloWorldOutputs": {
      "description": "Outputs for Default-HelloWorld",
      "value": {
        "arn": "\${aws_s3_bucket.HelloWorld_7964D1E8.arn}",
        "domainName": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket_domain_name}",
        "name": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "regionalDomainName": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket_regional_domain_name}",
        "websiteDomainName": "\${aws_s3_bucket_website_configuration.HelloWorld_WebsiteConfig_72ADC681.website_domain}",
        "websiteUrl": "\${aws_s3_bucket_website_configuration.HelloWorld_WebsiteConfig_72ADC681.website_endpoint}"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_s3_bucket": {
      "HelloWorld_7964D1E8": {
        "bucket_prefix": "hello-world-helloworld",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_s3_bucket_versioning": {
      "HelloWorld_Versioning_5513B8F4": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "versioning_configuration": {
          "status": "Enabled"
        }
      }
    },
    "aws_s3_bucket_website_configuration": {
      "HelloWorld_WebsiteConfig_72ADC681": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "index_document": {
          "suffix": "index.html"
        }
      }
    },
    "aws_s3_object": {
      "HelloWorld_source-0_File--images--officespace-greatjpg_19FE38F4": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "content_type": "image/jpeg",
        "depends_on": [
          "time_sleep.HelloWorld_VersioningSleep_FC16C7EC"
        ],
        "key": "/images/officespace-great.jpg",
        "source": "assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/images/officespace-great.jpg",
        "source_hash": "\${filemd5(\\"assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/images/officespace-great.jpg\\")}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      },
      "HelloWorld_source-0_File--indexhtml_DFC37CEB": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "time_sleep.HelloWorld_VersioningSleep_FC16C7EC"
        ],
        "key": "/index.html",
        "source": "assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/index.html",
        "source_hash": "\${filemd5(\\"assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/index.html\\")}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      },
      "HelloWorld_source-1_File--samplehtml_D893DB57": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "content_type": "text/html; charset=utf-8",
        "depends_on": [
          "time_sleep.HelloWorld_VersioningSleep_FC16C7EC"
        ],
        "key": "/sample.html",
        "source": "assets/HelloWorld_source-1_PathAsset_F1F0E41E/5E8FF9BF55BA3508199D22E984129BE6/sample.html",
        "source_hash": "\${filemd5(\\"assets/HelloWorld_source-1_PathAsset_F1F0E41E/5E8FF9BF55BA3508199D22E984129BE6/sample.html\\")}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "time_sleep": {
      "HelloWorld_VersioningSleep_FC16C7EC": {
        "create_duration": "15m"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`Bucket Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "HelloWorld_Policy_9607E751": {
        "statement": [
          {
            "actions": [
              "s3:GetObject"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "*"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "\${aws_s3_bucket.HelloWorld_7964D1E8.arn}/*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_s3_bucket": {
      "HelloWorld_7964D1E8": {
        "bucket_prefix": "hello-world-helloworld",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_s3_bucket_acl": {
      "HelloWorld_PublicAcl_A32D5A72": {
        "acl": "public-read",
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "depends_on": [
          "aws_s3_bucket_ownership_controls.HelloWorld_OwnershipControls_179F29CE",
          "aws_s3_bucket_public_access_block.HelloWorld_PublicAccessBlock_8B1865DA"
        ]
      }
    },
    "aws_s3_bucket_ownership_controls": {
      "HelloWorld_OwnershipControls_179F29CE": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "rule": {
          "object_ownership": "BucketOwnerPreferred"
        }
      }
    },
    "aws_s3_bucket_policy": {
      "HelloWorld_Policy_9E56801E": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "policy": "\${data.aws_iam_policy_document.HelloWorld_Policy_9607E751.json}"
      }
    },
    "aws_s3_bucket_public_access_block": {
      "HelloWorld_PublicAccessBlock_8B1865DA": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false
      }
    },
    "aws_s3_bucket_website_configuration": {
      "HelloWorld_WebsiteConfig_72ADC681": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "index_document": {
          "suffix": "index.html"
        }
      }
    },
    "aws_s3_object": {
      "HelloWorld_source-0_File--images--officespace-greatjpg_19FE38F4": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "content_type": "image/jpeg",
        "key": "/images/officespace-great.jpg",
        "source": "assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/images/officespace-great.jpg",
        "source_hash": "\${filemd5(\\"assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/images/officespace-great.jpg\\")}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      },
      "HelloWorld_source-0_File--indexhtml_DFC37CEB": {
        "bucket": "\${aws_s3_bucket.HelloWorld_7964D1E8.bucket}",
        "content_type": "text/html; charset=utf-8",
        "key": "/index.html",
        "source": "assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/index.html",
        "source_hash": "\${filemd5(\\"assets/HelloWorld_source-0_PathAsset_B9F685AE/7C1CC84268AB29AAED03995506EAD038/index.html\\")}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;
